# trailing-comma

./: CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
tests/: test_cli.py  test_comma.py  test_core.py  test_formatting.py  test_no_change.py  test_regression.py
trailing_comma/: __init__.py  __main__.py  _core.py
