[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "trailing-comma"
version = "0.1.1"
description = "Add and remove trailing commas in Python source"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "Martial Ren" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["tokenize-rt"]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.urls]
Homepage = "https://github.com/FrenchCommando/trailing-comma"

[project.scripts]
trailing-comma = "trailing_comma.__main__:main"
